# be-memcommerce

./: .env.example  .gitignore  Dockerfile  README.md  config.py  db.py  pyproject.toml
auth/: token.py
auth_providers/: google_auth.py
cache/: client.py  common.py  signed_urls.py
managers/: cart_manager.py  category_manager.py  claim_manager.py  color_manager.py  order_manager.py  product_manager.py  product_variant_manager.py  refund_manager.py  return_manager.py  review_manager.py  size_manager.py  storefront_manager.py  user_manager.py  wishlist_manager.py
mcp_clients/: anthropic_client.py  openai_client.py
message_services/: gmail_service.py
migrations/: 0001_add_image.sql  0002_add_users_table.sql  0003_add_cart_tables.sql  0004_add_order_tables.sql  0005_add_return_tables.sql  0006_add_reviews_table.sql  0007_alter_reviews.sql  0008_add_claim_and_refund_tables.sql  0009_add_wishlist_tables.sql  0010_alter_wishlist.sql  pure_sql_migration.sql
models/: admin_model.py  cart_line_item_model.py  cart_model.py  category_model.py  claim_item_model.py  claim_model.py  color_model.py  order_item_model.py  order_model.py  product_model.py  product_variant_model.py  refund_model.py  return_item_model.py  return_model.py  review_model.py  size_model.py  user_model.py  wishlist_item_model.py
routers/: ai_admin_router.py  auth_router.py  cart_router.py  categories.py  categories_router.py  category_router.py  claim_router.py  colors.py  email_router.py  image_router.py  main_router.py  order_router.py  product_variants.py  products.py  products_router.py  sizes.py  (+5 more)
(+28 files in other folders)
