[project]
name = "be-memcommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.54.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "google-cloud-storage==2.18.0",
    "greenlet>=3.2.1 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "mcp>=1.9.2",
    "openai>=1.86.0",
    "pillow==10.4.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
